[metadata]
name = house-minder
version = 1.0.0

[options]
zip_safe = False
packages = find:
include_package_data = True
install_requires =
    Flask
    flask-login
    pymongo
    oauthlib

[options.extras_require]
test = 
    pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source = 
    house-minder
